@@ -1,5 +1,4 @@
-#!/usr/bin/perl
-# -d:DProf
+#!/usr/bin/perl -d:DProf
 use strict;
 
 use lib qw[/home/httpd/html/www/markup/html/whatpm
@@ -151,4 +150,4 @@ and/or modify it under the same terms as Perl itself.
 
 =cut
 
-## $Date: 2008/09/14 14:36:12 $
+## $Date: 2008/09/15 02:55:12 $
